--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>JavaScript Piano</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <script type="text/javascript" src="scripts.js"></script>
+    <!-- <script type="text/javascript" src="scripts.js"></script> -->
   </head>
   <body>
 
@@ -53,6 +53,26 @@
     <audio data-key="76" src="sounds/Piano.ff.B4.wav"></audio>
     <audio data-key="186" src="sounds/Piano.ff.C5.wav"></audio>
 
+    <script>
+      function removeTransition(e) {
+        if (e.propertyName !== 'transform') return;
+        e.target.classList.remove('playing');
+      }
+
+      function playSound(e) {
+        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+        const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+        if (!audio) return;
+
+        key.classList.add('playing');
+        audio.currentTime = 0;
+        audio.play();
+      }
+
+      const keys = Array.from(document.querySelectorAll('.key'));
+      keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+      window.addEventListener('keydown', playSound);
+    </script>
   </body>
 </html>
 
