Delete <dd></dd> from E

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="sound">s</span>
       </div>
       <div data-key="68" class="key hexagon">
-        <kbd>E<dd></dd></kbd>
+        <kbd>E</kbd>
         <span class="sound">d</span>
       </div>
       <div data-key="70" class="key hexagon">
